--- a/force-app/main/default/lwc/communityExpandablePanel/communityExpandablePanel.html
+++ b/force-app/main/default/lwc/communityExpandablePanel/communityExpandablePanel.html
@@ -1,18 +1,19 @@
 <template>
-    <button onclick={togglevisible} label={header} aria-expanded={showpanel} class="lenkepanel lenkepanel--border hoved-panel">
+    <button onclick={togglevisible} label={header} aria-expanded={showpanel} class={lenkepanelClasses}>
         <lightning-layout>
-            <lightning-layout-item size=12>
+            <lightning-layout-item size="12">
                 <div class="link-header">
                     <span class="typo-undertittel lenkepanel__heading slds-float_left">{header}</span>
                     <span class="nav-frontend-chevron chevronboks chevron--ned slds-float_right"></span>
                 </div>
             </lightning-layout-item>
         </lightning-layout>
-       <template if:true={showpanel}>
-        <div class="expandable-body">
-          <p class="typo-normal bodytext">
-            <lightning-formatted-rich-text value={body}></lightning-formatted-rich-text>
-           </p>
-        </div>
-    </template></button>
+        <template if:true={showpanel}>
+            <div class="expandable-body">
+                <p class="typo-normal bodytext">
+                    <lightning-formatted-rich-text value={body}></lightning-formatted-rich-text>
+                </p>
+            </div>
+        </template>
+    </button>
 </template>
