--- a/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
+++ b/force-app/main/default/lwc/stoRegisterThread/stoRegisterThread.html
@@ -71,7 +71,7 @@
                             <div slot="modalFooter">
                                 <div class="slds-var-p-bottom_x-large svar-godta text-center blokk-m">
                                     <button
-                                        class="knapp knapp--hoved"
+                                        class="navds-button navds-button--primary navds-button--medium knapp-width"
                                         aria-controls="betingelser"
                                         onclick={termsAccepted}
                                         type="submit"
@@ -82,7 +82,7 @@
                                 </div>
                                 <div class="text-center">
                                     <button
-                                        class="knapp knapp--flat"
+                                        class="navds-button navds-button--secondary navds-button--medium knapp-width"
                                         type="submit"
                                         aria-controls="betingelser"
                                         role="button"
@@ -94,8 +94,9 @@
                             </div>
                         </c-community-modal>
                         <button
-                            class="sendbutton knapp knapp--hoved"
+                            class="sendbutton navds-button navds-button--primary navds-button--medium"
                             type="submit"
+                            style="padding: calc(0.475rem - 1px) 2.5rem calc(0.525rem - 1px) 2.5rem"
                             aria-disabled="false"
                             onclick={submitrequest}
                         >
