--- a/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.html
+++ b/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.html
@@ -8,7 +8,7 @@
         </div>
         <div class="body">
             <p class="navds-body-long navds-typo--spacing"><strong>
-                For meldinger om dokumenter og/eller informasjonsbrev se <a href="https://www.mininnboks.nav.no" class="lenke lenke-inline" target="_blank">brev og vedtak</a>
+                For meldinger om dokumenter og/eller informasjonsbrev se <a href="https://mininnboks.nav.no/" class="lenke lenke-inline" target="_blank">brev og vedtak</a>
             </strong></p>
         </div>
         <template if:true={showrecentthreads}>
