--- a/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.html
+++ b/force-app/main/default/lwc/stoMessageInbox/stoMessageInbox.html
@@ -1,7 +1,7 @@
 <template>
     <div class="inboxwrapper">
-        <div class="header decorator-wrapper">
-            <h1 class="typo-sidetittel">{title}</h1>
+        <div class="header">
+            <h1 class="navds-heading navds-heading--2xlarge">{title}</h1>
         </div>
         <div class="header">
             <c-nav-Button url="https://www.nav.no" title="Skriv ny melding"></c-nav-Button>
